# gSSURGO

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_placeholder.py
